--- a/src/maze/Maze.css
+++ b/src/maze/Maze.css
@@ -19,6 +19,13 @@
     align-content: center;
 }
 
+.player {
+    background-color: #0d0df5;
+    width: 25px;
+    height: 25px;
+
+}
+
 .finish {
     width: 25px;
     height: 25px;
